--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_chat_main.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_chat_main.xml
@@ -37,19 +37,24 @@
         android:id="@+id/dateSeparator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp" >
+        android:layout_margin="10dp" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/medic_bleep_blue"
+            android:layout_centerVertical="true"/>
 
         <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
             android:id="@+id/sectionDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:paddingTop="10dp"
-            android:textColor="@color/text_time_gray"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:background="@color/white"
+            android:textColor="@color/medic_bleep_blue"
+            android:textSize="15sp"
             tools:text="25.05:1990" />
     </RelativeLayout>
 
@@ -81,18 +86,10 @@
                     android:layout_width="20dp"
                     android:layout_height="17dp"
                     android:layout_gravity="right|top"
-                    android:layout_alignRight="@+id/timeMe"
                     android:layout_marginBottom="10dp"
                     android:contentDescription="@null"
                     android:src="@drawable/right_thread_arrow" />
 
-                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                    android:id="@+id/timeMe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:textColor="@color/text_time_gray"
-                    android:textSize="15sp" />
             </RelativeLayout>
 
             <LinearLayout
@@ -101,11 +98,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/shape_my_chat_bubble"
-                android:minHeight="20dp"
-                android:minWidth="20dp"
+                android:background="@drawable/me_message_bubble"
+                android:minWidth="100dp"
                 android:orientation="vertical"
-                android:padding="10dp" >
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="15dp">
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -121,12 +119,12 @@
                         android:linksClickable="true"
                         android:textColor="@android:color/white"
                         android:textColorLink="@color/light_light_gray"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
                     
                     <View
                         android:id="@+id/meViewForReadMoreClick"
                         android:layout_width="wrap_content"
-                        android:layout_height="20sp"
+                        android:layout_height="15sp"
                         android:layout_alignBottom="@id/meMsgContent"
                         android:layout_alignLeft="@id/meMsgContent"
                         android:layout_alignRight="@id/meMsgContent" />
@@ -159,6 +157,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_toRightOf="@id/mePlayPause"
                         android:text="00:00"
+                        android:textSize="15sp"
                         android:textColor="@android:color/white" />
 
                     <TextView
@@ -169,6 +168,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_toRightOf="@id/mePlayPause"
                         android:text="0%"
+                        android:textSize="15sp"
                         android:textColor="@android:color/white"
                         android:visibility="invisible" />
 
@@ -201,7 +201,7 @@
                     android:gravity="right|center_vertical"
                     android:text="@string/video_tap_to_play"
                     android:textColor="@android:color/white"
-                    android:textSize="17sp" />
+                    android:textSize="15sp"  />
 
                 <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                     android:id="@+id/meViewLocation"
@@ -212,7 +212,7 @@
                     android:gravity="right|center_vertical"
                     android:text="@string/location_tap_to_view"
                     android:textColor="@android:color/white"
-                    android:textSize="17sp" />
+                    android:textSize="15sp" />
 
                 <com.clover.spika.enterprise.chat.views.RoundCornersImageView
                     android:id="@+id/meViewImage"
@@ -257,7 +257,15 @@
                     android:gravity="right|center_vertical"
                     android:text=""
                     android:textColor="@android:color/white"
-                    android:textSize="17sp" />
+                    android:textSize="15sp"  />
+
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/timeMe"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:layout_gravity="right"
+                    android:textSize="10sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -271,30 +279,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                android:id="@+id/youPersonName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/temp"
-                android:paddingLeft="10dp"
-                android:textColor="@color/devil_gray"
-                android:textSize="14sp" />
-
-            <com.clover.spika.enterprise.chat.views.RoundImageView
-                android:id="@+id/youProfileImage"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_below="@id/youPersonName"
-                android:layout_marginLeft="10dp"
-                android:contentDescription="@null"
-                android:src="@drawable/default_user_image" />
-
             <LinearLayout
                 android:id="@+id/temp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/youPersonName"
-                android:layout_toRightOf="@id/youProfileImage"
                 android:gravity="left"
                 android:orientation="horizontal" >
 
@@ -305,11 +293,21 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="0"
-                    android:background="@drawable/shape_you_chat_bubble"
-                    android:minHeight="20dp"
-                    android:minWidth="20dp"
+                    android:background="@drawable/you_message_bubble"
+                    android:minWidth="100dp"
                     android:orientation="vertical"
-                    android:padding="10dp" >
+                    android:paddingBottom="0dp"
+                    android:paddingTop="0dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="10dp">
+
+                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                        android:id="@+id/youPersonName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/temp"
+                        android:textColor="@color/medic_bleep_hint_gray"
+                        android:textSize="10sp" />
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -322,12 +320,12 @@
                             android:autoLink="all"
                             android:gravity="left"
                             android:linksClickable="true"
-                            android:textColor="@android:color/black"
-                            android:textSize="20sp" />
+                            android:textColor="@color/medic_bleep_you_text_gray"
+                            android:textSize="15sp" />
                         
                         <View android:id="@+id/youViewForReadMoreClick"
                             android:layout_width="wrap_content"
-                            android:layout_height="20sp"
+                            android:layout_height="15sp"
                             android:visibility="gone"
                             android:layout_alignBottom="@id/youMsgContent"
                             android:layout_alignLeft="@id/youMsgContent"
@@ -361,9 +359,10 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="5dp"
+                            android:textSize="15sp"
                             android:layout_toRightOf="@id/youPlayPause"
                             android:text="00:00"
-                            android:textColor="@android:color/white" />
+                            android:textColor="@color/medic_bleep_you_text_gray" />
 
                         <TextView
                             android:id="@+id/youDownloadPercent"
@@ -371,9 +370,10 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="5dp"
+                            android:textSize="15sp"
                             android:layout_toRightOf="@id/youPlayPause"
                             android:text="0%"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/medic_bleep_you_text_gray"
                             android:visibility="invisible" />
 
                         <SeekBar
@@ -405,8 +405,8 @@
                         android:drawableRight="@drawable/icon_video"
                         android:gravity="left|center_vertical"
                         android:text="@string/video_tap_to_play"
-                        android:textColor="@android:color/black"
-                        android:textSize="17sp" />
+                        android:textColor="@color/medic_bleep_you_text_gray"
+                        android:textSize="15sp" />
 
                     <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                         android:id="@+id/youViewLocation"
@@ -416,8 +416,8 @@
                         android:drawableRight="@drawable/icon_location"
                         android:gravity="left|center_vertical"
                         android:text="@string/location_tap_to_view"
-                        android:textColor="@android:color/black"
-                        android:textSize="17sp" />
+                        android:textColor="@color/medic_bleep_you_text_gray"
+                        android:textSize="15sp" />
 
                     <com.clover.spika.enterprise.chat.views.RoundCornersImageView
                         android:id="@+id/youViewImage"
@@ -461,8 +461,16 @@
                         android:drawableRight="@drawable/icon_file"
                         android:gravity="left|center_vertical"
                         android:text=""
-                        android:textColor="@android:color/black"
-                        android:textSize="17sp" />
+                        android:textColor="@color/medic_bleep_you_text_gray"
+                        android:textSize="15sp" />
+
+                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                        android:id="@+id/timeYou"
+                        android:layout_gravity="right"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/medic_bleep_hint_gray"
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <RelativeLayout
@@ -479,18 +487,10 @@
                         android:layout_width="20dp"
                         android:layout_height="17dp"
                         android:layout_gravity="left|top"
-                        android:layout_alignLeft="@+id/timeYou"
                         android:layout_marginBottom="10dp"
                         android:contentDescription="@null"
                         android:src="@drawable/left_thread_arrow" />
 
-                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                        android:id="@+id/timeYou"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:textColor="@color/text_time_gray"
-                        android:textSize="15sp" />
                 </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
