--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_group.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_group.xml
@@ -10,38 +10,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:background="@android:color/white" >
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/shape_people_background" >
 
         <com.clover.spika.enterprise.chat.views.RoundImageView
             android:id="@+id/item_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
             android:contentDescription="@null"
             android:src="@drawable/default_user_image" />
 
-        <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+        <TextView
             android:id="@+id/item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/item_image"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
             android:paddingLeft="5dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textColor="@color/gray_to_white_selector"
+            android:textSize="18sp"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignLeft="@id/item_name"
-            android:layout_below="@id/item_image"
-            android:layout_marginTop="5dp"
-            android:background="@color/light_light_gray" />
     </RelativeLayout>
 
 </RelativeLayout>
