--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_thread_gif.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_thread_gif.xml
@@ -8,41 +8,31 @@
         android:id="@+id/relative_layout_thread_item_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="10dp" >
-
-        <TextView
-            android:id="@+id/text_view_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/messageRl"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/text_gray_image"
-            android:textSize="12sp"
-            tools:text="Stiven Spilberg" />
-
-        <com.clover.spika.enterprise.chat.views.RoundImageView
-            android:id="@+id/image_view_user"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_below="@id/text_view_user"
-            android:layout_marginLeft="10dp"
-            android:contentDescription="@null"
-            android:src="@drawable/default_user_image" />
+        android:padding="10dp" >
 
         <LinearLayout
             android:id="@+id/messageRl"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/image_view_user"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/image_view_user"
+            android:paddingLeft="15dp"
+            android:background="@drawable/you_message_bubble"
             android:gravity="left"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/text_view_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/messageRl"
+                android:textColor="@color/medic_bleep_hint_gray"
+                android:textSize="10sp"
+                tools:text="Stiven Spilberg" />
 
             <FrameLayout
                 android:id="@+id/webViewFlGif"
                 android:layout_width="150dp"
-                android:layout_height="150dp" >
+                android:layout_height="150dp"
+                android:paddingRight="10dp">
 
                 <com.clover.spika.enterprise.chat.views.emoji.ClickableWebView
                     android:id="@+id/webViewGif"
@@ -55,11 +45,10 @@
                 android:id="@+id/timeThread"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:textColor="@color/text_time_gray"
-                android:textSize="13sp" />
+                android:layout_gravity="right"
+                android:paddingRight="10dp"
+                android:textColor="@color/medic_bleep_hint_gray"
+                android:textSize="10sp" />
         </LinearLayout>
     </RelativeLayout>
 
