--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_invite_person.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_invite_person.xml
@@ -9,21 +9,23 @@
         android:id="@+id/clickLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp" >
+        android:background="@drawable/shape_people_background"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp" >
 
         <RelativeLayout
             android:id="@+id/imageLayout"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp" >
 
             <com.clover.spika.enterprise.chat.views.RoundImageView
                 android:id="@+id/userImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
                 android:contentDescription="@null" />
             <!--
                 <com.clover.spika.enterprise.chat.views.RoundCornersImageView
@@ -53,7 +55,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@color/black"
+                android:textColor="@color/gray_to_white_selector"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="pero" />
@@ -65,7 +67,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@color/black"
+                android:textColor="@color/gray_to_white_selector"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:text="group"
@@ -84,17 +86,10 @@
                 android:id="@+id/isSelected"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:paddingRight="5dp"
                 android:layout_centerInParent="true"
-                android:checked="false"
-                android:padding="15dp" />
+                android:checked="false" />
         </RelativeLayout>
-        
-        <View android:id="@+id/line"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/imageLayout"
-            android:layout_height="1dp"
-            android:background="@color/light_light_gray"
-            android:layout_below="@id/imageLayout"/>
     </RelativeLayout>
 
 </RelativeLayout>
