--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/pull_to_refresh_header_create_room.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/pull_to_refresh_header_create_room.xml
@@ -15,8 +15,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/circle_with_white_border"
             android:padding="10dp"
-            android:src="@drawable/add_photo"
-            tools:src="@drawable/@drawable/add_photo" />
+            android:src="@drawable/add_photo"/>
 
         <com.clover.spika.enterprise.chat.views.RobotoThinEditText
             android:id="@+id/et_room_name"
@@ -297,11 +296,4 @@
             android:src="@drawable/icon_search" />
     </RelativeLayout>
     
-    <View
-        android:id="@+id/bottomLineAboveListView"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/search_layout"
-        android:background="@color/chat_menu_gray" />
-
 </RelativeLayout>
