--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/dialog_select_category.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/dialog_select_category.xml
@@ -67,7 +67,7 @@
             android:id="@+id/noItems"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:text="@string/no_items"
             android:textColor="@color/default_blue"
             android:textSize="30sp"
