--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_invite_person.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_invite_person.xml
@@ -3,15 +3,15 @@
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent" >
+    android:background="@color/transparent"
+    android:paddingBottom="10dp">
 
     <RelativeLayout
         android:id="@+id/clickLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_people_background"
+        android:background="@drawable/shape_people_background_selector"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp" >
 
         <RelativeLayout
@@ -25,7 +25,9 @@
                 android:id="@+id/userImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:contentDescription="@null" />
             <!--
                 <com.clover.spika.enterprise.chat.views.RoundCornersImageView
@@ -78,9 +80,8 @@
             android:id="@+id/imageLayoutControl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/imageLayout"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@id/imageLayout" >
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true">
 
             <com.clover.spika.enterprise.chat.views.RobotoCheckBox
                 android:id="@+id/isSelected"
