--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_people.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_people.xml
@@ -3,7 +3,8 @@
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent">
+    android:background="@color/transparent"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:id="@+id/callControl"
@@ -59,14 +60,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/shape_people_background">
+        android:paddingBottom="10dp"
+        android:background="@drawable/shape_people_background_selector">
 
         <com.clover.spika.enterprise.chat.views.RoundImageView
             android:id="@+id/item_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:contentDescription="@null"
             android:src="@drawable/default_user_image" />
 
