--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_change_password.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_change_password.xml
@@ -1,146 +1,120 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/default_blue">
+    android:background="@color/white">
 
     <RelativeLayout
-        android:id="@+id/topLayout"
+        android:id="@+id/actionBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/menu_height"
-        android:layout_alignParentTop="true" >
+        android:layout_height="@dimen/menu_height">
 
         <ImageButton
-            android:id="@+id/goBack"
+            android:id="@+id/cancelBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
-            android:padding="20dp"
-            android:src="@drawable/btn_back" />
+            android:padding="10dp"
+            android:src="@drawable/btn_back_blue" />
 
-        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
+        <TextView
             android:id="@+id/screenTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_toLeftOf="@+id/sendVideo"
-            android:layout_toRightOf="@+id/goBack"
-            android:gravity="center"
             android:text="@string/change_password_title"
-            android:textColor="@android:color/white"
+            android:textColor="@color/medic_bleep_blue"
             android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/sendVideo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/selector_transp_blue"
-            android:contentDescription="@null"
-            android:padding="20dp"
-            android:src="@drawable/btn_back"
-            android:visibility="invisible" />
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="20dp" >
+        android:layout_below="@id/actionBarLayout"
+        android:layout_marginTop="25dp"
+        android:id="@+id/mailAndStars">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/tvRequiredStar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center_vertical"
+            android:text="*"
+            android:layout_alignBottom="@+id/newPassword"
+            android:layout_alignTop="@+id/newPassword"
+            android:includeFontPadding="false"
+            android:textColor="@color/red"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/newPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp" >
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/tvRequiredStar"
+            android:background="@drawable/et_background"
+            android:maxLines="1"
+            android:hint="@string/new_password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/medic_bleep_text_gray"
+            android:textColorHint="@color/medic_bleep_hint_gray"
+            android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/usernameImg"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:contentDescription="@null"
-                android:src="@drawable/login_key" />
+        <TextView
+            android:id="@+id/tvRequiredStar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center_vertical"
+            android:text="*"
+            android:layout_alignBottom="@+id/confirmNewPassword"
+            android:layout_alignTop="@+id/confirmNewPassword"
+            android:includeFontPadding="false"
+            android:textColor="@color/red"
+            android:textSize="20sp" />
 
-            <com.clover.spika.enterprise.chat.views.RobotoThinEditText
-                android:id="@+id/newPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/usernameImg"
-                android:layout_alignTop="@+id/usernameImg"
-                android:layout_toRightOf="@+id/usernameImg"
-                android:background="@null"
-                android:hint="@string/new_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="5dp"
-                android:singleLine="true" />
+        <EditText
+            android:id="@+id/confirmNewPassword"
+            android:layout_width="match_parent"
+            android:layout_below="@id/newPassword"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/tvRequiredStar"
+            android:background="@drawable/et_background"
+            android:maxLines="1"
+            android:hint="@string/re_type_password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/medic_bleep_text_gray"
+            android:textColorHint="@color/medic_bleep_hint_gray"
+            android:textSize="16sp" />
 
-            <View
-                android:id="@+id/bottomLine"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/usernameImg"
-                android:layout_marginTop="10dp"
-                android:background="@color/default_blue" />
-        </RelativeLayout>
-
-        <RelativeLayout
+        <Button
+            android:id="@+id/submitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp" >
-
-            <ImageView
-                android:id="@+id/passwordImg"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:contentDescription="@null"
-                android:src="@drawable/login_key" />
-
-            <com.clover.spika.enterprise.chat.views.RobotoThinEditText
-                android:id="@+id/confirmNewPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/passwordImg"
-                android:layout_alignTop="@+id/passwordImg"
-                android:layout_toRightOf="@+id/passwordImg"
-                android:background="@null"
-                android:hint="@string/re_type_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="5dp"
-                android:singleLine="true" />
-
-            <View
-                android:id="@+id/bottomLinePass"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/passwordImg"
-                android:layout_marginTop="10dp"
-                android:background="@color/default_blue" />
-        </RelativeLayout>
-
-        <com.clover.spika.enterprise.chat.views.RobotoThinButton
-            android:id="@+id/confirmBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/confirmNewPassword"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_alignLeft="@id/confirmNewPassword"
+            android:layout_alignRight="@id/confirmNewPassword"
+            android:layout_marginTop="15dp"
             android:background="@drawable/selector_green"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/confirm_big"
+            android:text="@string/send"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
 
 </RelativeLayout>
