--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_chat_main.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_chat_main.xml
@@ -279,14 +279,29 @@
                     android:textColor="@android:color/white"
                     android:textSize="15sp"  />
 
-                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                    android:id="@+id/timeMe"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
                     android:layout_gravity="right"
-                    android:paddingRight="15dp"
-                    android:textSize="10sp" />
+                    android:paddingRight="10dp"
+                    android:orientation="horizontal">
+
+                    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                        android:id="@+id/timeMe"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="5dp"
+                        android:textColor="@color/white"
+                        android:textSize="10sp" />
+
+                    <View
+                        android:layout_width="15dp"
+                        android:layout_height="11dp"
+                        android:id="@+id/meMessageStatus"
+                        />
+                </LinearLayout>
+
+
             </LinearLayout>
         </LinearLayout>
 
