--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_invite_people.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_invite_people.xml
@@ -41,63 +41,19 @@
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
-        <LinearLayout
-            android:id="@+id/invitationOptions"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal" >
-
-            <ImageButton
-                android:id="@+id/inviteBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_transp_blue"
-                android:contentDescription="@null"
-                android:padding="10dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/confirm_btn" />
-
-            <ImageButton
-                android:id="@+id/searchBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_transp_blue"
-                android:contentDescription="@null"
-                android:padding="10dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/icon_search" />
-        </LinearLayout>
-
         <ImageButton
-            android:id="@+id/close_search"
+            android:id="@+id/inviteBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
             android:padding="10dp"
             android:scaleType="centerInside"
-            android:src="@drawable/btn_back"
-            android:visibility="gone" />
+            android:src="@drawable/confirm_btn" />
 
-        <EditText
-            android:id="@+id/searchEt"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_toLeftOf="@id/close_search"
-            android:layout_toRightOf="@id/hackView"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:singleLine="true"
-            android:textColor="@color/white"
-            android:visibility="gone" />
     </RelativeLayout>
-    
+
     <TextView
         android:id="@+id/invitedPeople"
         android:layout_width="match_parent"
@@ -106,9 +62,32 @@
         android:maxLines="4"
         android:gravity="bottom"
         android:scrollbars="vertical"
-        android:layout_margin="10dp"
+        android:padding="10dp"
         android:textColor="@color/text_blue"
         android:ems="13"/>
+
+    <View
+        android:id="@+id/bottomLineAboveSearch"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/chat_menu_gray" />
+
+    <EditText android:id="@+id/etSearchUsers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:singleLine="true"
+        android:hint="@string/search_for_people"
+        android:background="@color/trans"
+        android:textColorHint="@color/text_gray_image"
+        android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
+        android:textColor="@android:color/black"
+        android:imeOptions="actionSearch"
+        android:visibility="visible"/>
 
     <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
         android:id="@+id/main_list_view"
